--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "react-img-select",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "main": "build/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/NickFoden/react-img-select"
   },
-  "author": "",
+  "peerDependencies": {
+    "react": "^16.4.0"
+  },
+  "scripts": {
+    "start": "webpack --watch",
+    "build": "webpack"
+  },
+  "author": "nickfoden",
   "license": "ISC",
   "dependencies": {
     "react": "^16.7.0",
